--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <h1>Petryshyn Iryna</h1>
         <div class="logo"> 
-            <h3>My guide to Croatia</h3>
+            <h3>My guide <br>to <br>Croatia</h3>
             <img src="images/lavender-wreath-ico.png" alt="lavender-wreath">
         </div>
         <nav>
@@ -73,10 +73,50 @@
                 <img src="arrow.jpg" alt="arrow pointing to Croatia">
                 <img src="plitvice.jpg" alt="bridges on Plitvice lakes">
                 <img src="zadar.jpg" alt="old town of Zadar">
+            </div>
+             <div class="navigation">
+                <a href="#" class="nav-in-active"></a>
+                <a href="#" class="nav-in-active"></a>
+                <a href="#" class="nav-active"></a>
+                <a href="#" class="nav-in-active"></a>
+            </div>
         </section>
     </main>
     <footer>
-        
+        <div class="follow-me">
+            <div class="background-stone">
+                <img src="follow-me.jpg" alt="backpack-boots-stone">
+                </div>
+            <div class="text">
+                 <h2>Follow me</h2>
+            </div>
+            <div class="social-network">
+                <a href="#" class=""><img src="images/logo-facebook.png" alt="facebook"></a>
+                <a href="#" class=""><img src="images/logo-instagram.png" alt="instagram"></a>
+                <a href="#" class=""><img src="images/logo-youtube.png" alt="youtube"></a>
+            </div>
+        </div>
+
+        <div class="ask-me">
+            <div clas="background-mountain">
+                <img src="ask-me.jpg" alt="mountain">
+            </div>
+            <div class="center">
+                <h2>Ask me anything!</h2>
+                <p>Write any questions about my travels. Fill out the form below or email me at petryshyn.iryna@gmail.com</p>
+                <form action="ask-me"method="POST">
+                    <label>
+                        <input type="text" placeholder="Name*" required>
+                    </label>
+                    <label>
+                        <input type="text" placeholder="E-mail*" required>
+                    </label>
+                    <label>
+                        <input type="text" placeholder="You message" required>
+                    </label>
+                    <input type="submit" value="Submit" >
+                </form> 
+        </div>
     </footer>
 </body>
 </html>
