--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
                 <h2>Follow me</h2>
             </div>
             <div class="social-network">
-                <a href="#" class="icon"><img src="images/icon-facebook.png" alt="facebook"></a>
-                <a href="#" class="icon"><img src="images/icon-instagram.png" alt="instagram"></a>
-                <a href="#" class="icon"><img src="images/icon-youtube.png" alt="youtube"></a>
+                <a href="#" class="icon"><img src="images/facebook.png" alt="facebook"></a>
+                <a href="#" class="icon"><img src="images/instagram.png" alt="instagram"></a>
+                <a href="#" class="icon"><img src="images/youtube.png" alt="youtube"></a>
             </div>
         </div>
         <div class="ask-me">
