--- a/travels.html
+++ b/travels.html
@@ -9,7 +9,7 @@
     <header>
         <h1>Petryshyn Iryna</h1>
         <div class="logo"> 
-            <h3>My guide <br>to <br>Croatia</h3>
+            <h3>My guide to Croatia</h3>
             <img src="images/lavender-wreath-ico.png" alt="lavender-wreath">
         </div>
         <nav>
@@ -72,9 +72,9 @@
                  <h2>Follow me</h2>
             </div>
             <div class="social-network">
-                <a href="#" class="icon"><img src="images/icon-facebook.png" alt="facebook"></a>
-                <a href="#" class="icon"><img src="images/icon-instagram.png" alt="instagram"></a>
-                <a href="#" class="icon"><img src="images/icon-youtube.png" alt="youtube"></a>
+                <a href="#" class="icon"><img src="images/facebook.png" alt="facebook"></a>
+                <a href="#" class="icon"><img src="images/instagram.png" alt="instagram"></a>
+                <a href="#" class="icon"><img src="images/youtube.png" alt="youtube"></a>
             </div>
         </div>
     </footer>
