--- a/html/index.html
+++ b/html/index.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Petryshyn Iryna My guide to Croatia</title>
+    <title> Iryna's guide to Croatia</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="shortuct icon" href="img/lavender-wreath.png">
 </head>
 <body>
     <header>
-        <h1>Petryshyn Iryna</h1>
         <div class="logo"> 
-            <h3>My guide <br>to <br>Croatia</h3>
-            <img src="images/lavender-wreath-ico.png" alt="lavender-wreath">
+            <h1>Iryna's guide <br> to <br>Croatia</h1>
+            <img src="images/lavender-wreath.png" alt="Wreath of lavender flowers">
         </div>
         <nav>
             <a href="travels.html">About my travels</a>
             <a href="guide.html">Guide</a>
             <a href="index.html#ask">Contacts</a>
         </nav>
-        <img src="images/my-photo.jpg" alt="my-photo">
+        <div class="baner">
+            <img src="images/funny-expression.jpg" alt="sitting at the table with a funny expression">
+        </div>
         <div class="guote">
             <h2><i>"To better understand the new country, you need to smell it."</i></h2>
             <p>Rudyard Kiplins</p>
