--- a/guide.html
+++ b/guide.html
@@ -10,7 +10,7 @@
         <h1>Petryshyn Iryna</h1>
         <div class="logo"> 
             <h3>My guide to Croatia</h3>
-            <img src="images/lavender-wreath-ico.png" alt="lavender-wreath">
+            <img src="images/lavender-wreath-ico.png" alt="lavender-wreath" width="117" height="auto">
         </div>
         <nav>
             <a href="index.html">Home</a>
