--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
             <img src="images/funny-expression.jpg" alt="sitting at the table with a funny expression">
         </div>
         <div class="guote">
-            <h2><i>"To better understand the new country, you need to smell it."</i></h2>
+            <h2><em>"To better understand the new country, you need to smell it."</em></h2>
             <p>Rudyard Kiplins</p>
         </div>
     </header>
+    <!--
     <main>
         <section>
             <h2>About my travels</h2>
@@ -121,5 +122,6 @@
             </div>    
         </div>
     </footer>
+    -->
 </body>
 </html>
